[gd_scene load_steps=5 format=3 uid="uid://dxkfheoedlyrb"]

[ext_resource type="Script" path="res://Objects/trainTracks.gd" id="1_qcm4l"]
[ext_resource type="PackedScene" uid="uid://cbryhvua33vf7" path="res://Objects/train.tscn" id="2_smd7n"]
[ext_resource type="PackedScene" uid="uid://cc2mvth3somss" path="res://Objects/road_mesh.tscn" id="3_bt80c"]

[sub_resource type="BoxShape3D" id="BoxShape3D_uap7l"]
size = Vector3(1, 10, 0.8)

[node name="TrainTracks" type="Node3D" node_paths=PackedStringArray("trainSpawningTimer", "trainSpawningPoint", "trainRemovalArea")]
script = ExtResource("1_qcm4l")
trainScene = ExtResource("2_smd7n")
trainSpawningTimer = NodePath("trainSpawningTimer")
trainSpawningPoint = NodePath("trainSpawningPoint")
trainRemovalArea = NodePath("trainRemovalArea")

[node name="trainSpawningTimer" type="Timer" parent="."]

[node name="trainSpawningPoint" type="Node3D" parent="."]

[node name="trainRemovalArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="trainRemovalArea"]
shape = SubResource("BoxShape3D_uap7l")

[node name="CollisionRoad" parent="." instance=ExtResource("3_bt80c")]

[connection signal="timeout" from="trainSpawningTimer" to="." method="trainSpawningTimerEnded"]
[connection signal="body_entered" from="trainRemovalArea" to="." method="trainRemovalAreaEntered"]
